# haskell-static-compilation-example

./: CHANGELOG.md  README.md  default.nix  haskell-static-compilation-example.cabal  shell.nix
app/: Main.hs  TH.hs
nix/: sources.json
