cabal-version:      2.4
name:               haskell-static-compilation-example
version:            0.0.0.1
author:             Vehbi Sinan Tunalioglu
maintainer:         vst@vsthost.com
extra-source-files: CHANGELOG.md

executable haskell-static-compilation-example
    main-is:          Main.hs
    build-depends:
          base ^>=4.15.1.0
        , template-haskell
    other-modules:
      TH
    hs-source-dirs:   app
    default-language: Haskell2010
